# budget

./: .gitignore  CMakeLists.txt  NOTICE.txt  main.cpp  package.json  tls-certificate-generation.txt  tsconfig.json  webpack.config.js
.github/workflows/: create-release.yml  main.yml
entering-transaction/: Controller.cpp  Controller.hpp  Model.hpp
gtk/: CMakeLists.txt  control.hpp  main.cpp
lib/: CMakeLists.txt  account.cpp  bank.cpp  budget.cpp  calculate.cpp  collect.cpp  command-line.cpp  control.cpp  evaluate.cpp  file.cpp  format.cpp  parse.cpp  presentation.cpp  print.cpp  serialization.cpp  stream.cpp  transaction.cpp  view.cpp
lib/include/sbash64/budget/: account.hpp  bank.hpp  budget.hpp  calculate.hpp  collect.hpp  command-line.hpp  constexpr-string.hpp  control.hpp  domain.hpp  evaluate.hpp  file.hpp  format.hpp  parse.hpp  presentation.hpp  print.hpp  serialization.hpp  stream.hpp  transaction.hpp  transform.hpp  view.hpp
lib/include/sbash64/budget/entering-transaction/: Controller.hpp  Model.hpp
lib/include/sbash64/budget/transferring-to-new-account/: Controller.hpp  Model.hpp
openssl-root/: generate-certificates.sh
test/: CMakeLists.txt  account-stub.hpp  account.cpp  account.hpp  bank.cpp  bank.hpp  budget.cpp  budget.hpp  calculate.cpp  calculate.hpp  collect.cpp  collect.hpp  command-line.cpp  command-line.hpp  evaluate.cpp  evaluate.hpp  file.cpp  file.hpp  format.cpp  format.hpp  main.cpp  parse.cpp  parse.hpp  persistent-memory-stub.hpp  presentation.cpp  presentation.hpp  print.cpp  print.hpp  printer-stub.hpp  stream.cpp  stream.hpp  transaction.cpp  transaction.hpp  transform.cpp  transform.hpp  usd.cpp  usd.hpp  view-stub.hpp
test/entering-transaction/: Controller.cpp  Controller.hpp
web/: .eslintrc.json  CMakeLists.txt  exampleClientMessages.json  exampleServerMessages.json  index.html  main.cpp  main.js  main.ts  styles.css
